==> svijsv/GHMon/src/platform/CMSIS_STM32/system.c <==
#include "system.h"
#include "adc.h"
#include "gpio.h"
#include "spi.h"
#include "time.h"
#include "uart.h"
#include "i2c.h"
#define SYSFLASH_MS (500U)
#define SYSFLASH_BUF_MS (200U)
#define SYSALERT_MS (SYSFLASH_MS*2U)
#define PLL_SRC_NONE     0
#define PLL_SRC_HSE      1
#define PLL_SRC_HSE_DIV2 2
#define PLL_SRC_HSI      3
#define PLL_SRC_HSI_DIV2 4
# define FREQ_INPUT_HZ G_freq_HSI
# define FREQ_INPUT_HZ G_freq_HSE
#define FREQ_OUTPUT_HZ G_freq_CORE
#define CAN_USE_OSC_CLOCK(_test, _osc) ((_test) == (_osc))
# define PLL_SRC PLL_SRC_NONE
# define FREQ_OSC_HZ FREQ_INPUT_HZ
#  define PLL_TEST_OSC FREQ_INPUT_HZ
#  include "system_PLL_STM32F1.h"
#  define PLL_SRC PLL_SRC_HSE
#  define FREQ_OSC_HZ (FREQ_INPUT_HZ * PLL_MUL)
#  define PLL_TEST_OSC (FREQ_INPUT_HZ/2U)
#  include "system_PLL_STM32F1.h"
#    define PLL_SRC PLL_SRC_HSI_DIV2
#    define PLL_SRC PLL_SRC_HSE_DIV2
#   define FREQ_OSC_HZ ((FREQ_INPUT_HZ/2U) * PLL_MUL)
#  define PLL_SRC PLL_SRC_HSI
#  define PLL_SRC PLL_SRC_HSE
# define PLLP_DIV_2 0b00U
# define PLLP_DIV_4 0b01U
# define PLLP_DIV_6 0b10U
# define PLLP_DIV_8 0b11U
# define PLLM_MIN (PLL_PLLM_MIN)
# define PLLM_MAX (PLL_PLLM_MAX)
# define VCO_INPUT_MIN_HZ (PLL_VCO_INPUT_MIN_HZ)
# define VCO_INPUT_MAX_HZ (PLL_VCO_INPUT_MAX_HZ)
# define PLLN_MIN (PLL_PLLN_MIN)
# define PLLN_MAX (PLL_PLLN_MAX)
# define VCO_OUTPUT_MIN_HZ (PLL_VCO_OUTPUT_MIN_HZ)
# define VCO_OUTPUT_MAX_HZ (PLL_VCO_OUTPUT_MAX_HZ)
# include "system_PLL_STM32Fx.h"
# define FREQ_OSC_HZ PLL_OUTPUT_HZ

void platform_init(void) {
	clocks_init();

	// The AFIO clock is needed to fix a few problems and remap the inputs, so
	// enable it here and disable at the end of setup when it's no longer needed
	clock_init(EXTI_PREG_CLOCKEN);

	gpio_init();

	time_init();

#if uHAL_USE_UART_COMM
	const uart_port_cfg_t uart_cfg = {
		.rx_pin = UART_COMM_RX_PIN,
		.tx_pin = UART_COMM_TX_PIN,
		.baud_rate = UART_COMM_BAUDRATE,
	};

	if (uart_init_port(UART_COMM_PORT, &uart_cfg) == ERR_OK) {
		uart_on(UART_COMM_PORT);
		serial_init();
	} else {
		error_state_crude();
	}
#endif

#if uHAL_USE_SPI
	spi_init();
#endif

#if uHAL_USE_I2C
	i2c_init();
#endif

#if uHAL_USE_ADC
	adc_init();
#endif

	// Set interrupt priority grouping
	// Use 4 bits for group priority and 0 bits for subpriority
	// See 4.4.5 (SCB_AIRCR register) of the Cortex M3 programming manual for
	// how to determine the value passed, it looks to be '3 + number of bits
	// for subpriority'. Cortex M4 is the same.
	NVIC_SetPriorityGrouping(0b011U + 0U);

	clock_disable(EXTI_PREG_CLOCKEN);

	return;
}

void hibernate(sleep_mode_t sleep_mode, uHAL_flags_t flags) {
	uint32_t pwr_cr = 0;

	pre_hibernate_hook_caller(NULL, &sleep_mode, flags);

	if (uHAL_CHECK_STATUS(uHAL_FLAG_INHIBIT_HIBERNATION)) {
		sleep_mode = HIBERNATE_LIGHT;
	}
#if uHAL_HIBERNATE_LIMIT
	if (sleep_mode > uHAL_HIBERNATE_LIMIT) {
		sleep_mode = uHAL_HIBERNATE_LIMIT;
	}
#endif

	switch (sleep_mode) {
	case HIBERNATE_LIGHT:
		CLEAR_BIT(SCB->SCR, SCB_SCR_SLEEPDEEP_Msk);
		break;
	case HIBERNATE_MAX:
		SET_BIT(pwr_cr, 1U << PWR_CR_PDDS_Pos);
		//fallthrough
	default:
	//case HIBERNATE_DEEP:
		SET_BIT(pwr_cr, PWR_CR_SLOW_WAKE_BITS);
		SET_BIT(SCB->SCR, SCB_SCR_SLEEPDEEP_Msk);
		MODIFY_BITS(PWR->CR, PWR_CR_PDDS|PWR_CR_SLOW_WAKE_MASK, pwr_cr);
		break;
	}

	// The systick interrupt will wake us from sleep if left enabled
	disable_systick();

	// Wait for an interrupt
	// The stop mode entry procedure will be ignored and program execution
	// continues if any of the EXTI interrupt pending flags, peripheral
	// interrupt pending flags, or RTC alarm flag are set.
	__WFI();

	if (sleep_mode != HIBERNATE_LIGHT) {
		// The SYSCLK is always HSI on wakeup from stop mode
		enable_sysclock();
	}

	// Resume systick
	enable_systick();

	// Clear wakeup flag by writing 1 to CWUF
	SET_BIT(PWR->CR, PWR_CR_CWUF);

	post_hibernate_hook_caller(0, sleep_mode, flags);

	return;
}
