==> svijsv/GHMon/src/platform/AVR_XMEGA3/system.c <==
#include "system.h"
#include "adc.h"
#include "gpio.h"
#include "spi.h"
#include "time.h"
#include "i2c.h"
#include <avr/io.h>
#include <avr/interrupt.h>
#include <avr/sleep.h>
#include <util/delay_basic.h>
#include <avr/wdt.h>

void platform_init(void) {
	// The watchdog timer remains active after most resets and should be
	// cleared early as a precaution
	// It shouldn't ahve been set anywhere, but doing this won't hurt...
	// https://www.nongnu.org/avr-libc/user-manual/group__avr__watchdog.html
	RSTCTRL.RSTFR = 0;
	wdt_disable();

	// Disable interrupts for peripheral setup
	cli();

	// Set the prescaler before changing the clock source so that if the source
	// is above the maximum supported main clock frequency the system never
	// exceeds it
#if (F_OSC % F_CORE) != 0
# error "Can't obtain F_CORE from F_OSC: F_OSC not divisible by F_CORE"
#elif (F_OSC / F_CORE) == 1
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, 0);
#elif (F_OSC / F_CORE) == 2
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_2X_gc | CLKCTRL_PEN_bm));
#elif (F_OSC / F_CORE) == 4
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_4X_gc | CLKCTRL_PEN_bm));
#elif (F_OSC / F_CORE) == 6
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_6X_gc | CLKCTRL_PEN_bm));
#elif (F_OSC / F_CORE) == 8
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_8X_gc | CLKCTRL_PEN_bm));
#elif (F_OSC / F_CORE) == 10
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_10X_gc | CLKCTRL_PEN_bm));
#elif (F_OSC / F_CORE) == 12
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_12X_gc | CLKCTRL_PEN_bm));
#elif (F_OSC / F_CORE) == 16
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_16X_gc | CLKCTRL_PEN_bm));
#elif (F_OSC / F_CORE) == 24
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_24X_gc | CLKCTRL_PEN_bm));
#elif (F_OSC / F_CORE) == 32
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_32X_gc | CLKCTRL_PEN_bm));
#elif (F_OSC / F_CORE) == 48
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_48X_gc | CLKCTRL_PEN_bm));
#elif (F_OSC / F_CORE) == 64
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLB, (CLKCTRL_PDIV_64X_gc | CLKCTRL_PEN_bm));
#else
# error "Can't obtain F_CORE from F_OSC: No usable prescaler"
#endif
DEBUG_CPP_MACRO(F_OSC / F_CORE);

#if uHAL_USE_INTERNAL_OSC
	// The minimum frequecy OSC20M can produce when set to 16MHz mode is 250KHz
	// and the maximum OSCULP32K can produce is 32.768KHz, so pick a point in
	// between and assume anything outside those theoretical bounds is a result
	// of measuring the actual frequency of the (innaccurate) internal oscillators
# if F_OSC <= 100000
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLA, CLKCTRL_CLKSEL_OSC_OSCULP32K_gc);
# else
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLA, CLKCTRL_CLKSEL_OSC20M_gc);
# endif
#else // uHAL_USE_INTERNAL_OSC
	// Some devices can use an external 32KHz crystal as the clock source but
	// it's slightly more complicated to handle and who would need that anyway?
	_PROTECTED_WRITE(CLKCTRL.MCLKCTRLA, CLKCTRL_CLKSEL_EXTCLK_gc);
#endif // uHAL_USE_INTERNAL_OSC

	// Wait for clock source to change
	while (BIT_IS_SET(CLKCTRL.MCLKSTATUS, CLKCTRL_SOSC_bm)) {
		// Nothing to do here
	}

	gpio_init();

	time_init();

#if uHAL_USE_UART_COMM
	const uart_port_cfg_t uart_cfg = {
		.rx_pin = UART_COMM_RX_PIN,
		.tx_pin = UART_COMM_TX_PIN,
		.baud_rate = UART_COMM_BAUDRATE,
	};
	if (uart_init_port(UART_COMM_PORT, &uart_cfg) == ERR_OK) {
		uart_on(UART_COMM_PORT);
		serial_init();
	} else {
		error_state_crude();
	}
#endif

#if uHAL_USE_SPI
	spi_init();
#endif

#if uHAL_USE_I2C
	i2c_init();
#endif

// These ranges for reference voltage selection are just guess work right
// now
#if INTERNAL_VREF_mV <= 800
# define VREF_REFSEL VREF_ADC0REFSEL_0V55_gc
#elif INTERNAL_VREF_mV <= 1300
# define VREF_REFSEL VREF_ADC0REFSEL_1V1_gc
#elif INTERNAL_VREF_mV <= 2000
# define VREF_REFSEL VREF_ADC0REFSEL_1V5_gc
#elif INTERNAL_VREF_mV <= 3500
# define VREF_REFSEL VREF_ADC0REFSEL_2V5_gc
#else // INTERNAL_VREF_mV == 4300
# define VREF_REFSEL VREF_ADC0REFSEL_4V34_gc
#endif
	MODIFY_BITS(VREF.CTRLA, VREF_ADC0REFSEL_gm, VREF_REFSEL);

#if uHAL_USE_ADC
	adc_init();
#endif

	// Enable interrupts
	sei();

	return;
}

void hibernate(sleep_mode_t sleep_mode, uHAL_flags_t flags) {
	uint8_t set_mode, sreg;

	pre_hibernate_hook_caller(NULL, &sleep_mode, flags);
/*
#if uHAL_USE_HIBERNATE
	if (s != (utime_t )-1) {
		hibernate_s(s, sleep_mode, flags);
		return;
	}
#endif
*/

	if (uHAL_CHECK_STATUS(uHAL_FLAG_INHIBIT_HIBERNATION)) {
		sleep_mode = HIBERNATE_LIGHT;
	}
#if uHAL_HIBERNATE_LIMIT
	if (sleep_mode > uHAL_HIBERNATE_LIMIT) {
		sleep_mode = uHAL_HIBERNATE_LIMIT;
	}
#endif

	switch (sleep_mode) {
	case HIBERNATE_LIGHT:
		set_mode = SLEEP_MODE_IDLE;
		break;
	case HIBERNATE_MAX:
		set_mode = SLEEP_MODE_PWR_DOWN;
		break;
//	case HIBERNATE_DEEP:
	default:
		set_mode = SLEEP_MODE_STANDBY;
		break;
	}

	//FIXME:
	// When waking from deep sleep, there's a frame error on the RX side of
	// transmitted messages without this pause and I can't determine the
	// reason
#if uHAL_USE_UART
	delay_ms(10);
#endif
	set_sleep_mode(set_mode);

	SAVE_INTERRUPTS(sreg);
	disable_systick();
	cli();
	sleep_enable();
#if defined(sleep_bod_disable)
	sleep_bod_disable();
#endif
	sei();
	sleep_cpu();
	sleep_disable();
	enable_systick();
	RESTORE_INTERRUPTS(sreg);

	post_hibernate_hook_caller(0, sleep_mode, flags);

	return;
}
